--- a/src/styles/mdx.css
+++ b/src/styles/mdx.css
@@ -41,11 +41,11 @@
 }
 
 [data-rehype-pretty-code-title] {
-  @apply rounded-t-md bg-gray-700 p-2 font-mono text-sm font-semibold text-gray-200;
+  @apply rounded-t-md bg-gray-700 py-2 px-5 font-mono text-sm font-semibold text-gray-200;
 }
 
-[data-rehype-pretty-code-title] ~ pre {
-  @apply rounded-t-none;
+[data-rehype-pretty-code-title] ~ div > pre {
+  @apply rounded-t-none mt-0;
 }
 
 .subheading-anchor {
