--- a/src/styles/core.css
+++ b/src/styles/core.css
@@ -8,7 +8,7 @@
   }
 
   * {
-    @apply m-0 subpixel-antialiased;
+    @apply m-0;
     font: inherit;
   }
 
@@ -18,7 +18,7 @@
   }
 
   body {
-    @apply isolate flex flex-col overflow-x-hidden text-sm leading-relaxed antialiased;
+    @apply isolate flex flex-col overflow-x-hidden text-xs leading-normal antialiased;
     height: stretch;
   }
 
@@ -100,11 +100,17 @@
       transition-delay: -1ms !important;
     }
   }
+
+  body main,
+  body section,
+  body article,
+  body article [id] {
+    @apply scroll-pt-[4rem];
+  }
 }
 
 html {
   margin-left: calc(100vw - 100%);
-  scroll-padding-top: 5rem;
 }
 
 html,
