--- a/src/styles/mdx.css
+++ b/src/styles/mdx.css
@@ -48,16 +48,59 @@
   @apply mt-0 rounded-t-none;
 }
 
-.subheading-anchor {
-  @apply no-underline hover:underline;
+details[data-type="toc"] {
+  @apply relative mb-4 select-none rounded-md border p-3 px-4;
+  border-color: var(--tw-prose-hr);
 }
 
-details.toc {
-  @apply mb-4;
+summary:before {
+  content: "";
+  position: absolute;
+  border-width: 0.4rem;
+  border-style: solid;
+  border-color: transparent transparent transparent #375141;
+  top: 30px;
+  transform: rotate(0);
+  transform-origin: 0.2rem 50%;
+  transition: 0.15s transform ease-in;
+}
+
+html.dark summary:before {
+  border-color: transparent transparent transparent #d1d1d1;
+}
+
+details[open] > summary:before {
+  transform: rotate(90deg);
+}
+
+details summary::marker {
+  @apply hidden;
+}
+
+.subheading-anchor {
+  @apply rounded no-underline opacity-0 transition-opacity duration-150 ease-out;
+}
+
+.subheading-anchor:focus,
+:hover > .subheading-anchor {
+  @apply opacity-100;
+}
+
+.subheading-anchor:after {
+  content: "#";
+  @apply pl-1 pr-1 text-gray-500;
+}
+
+html.dark .subheading-anchor:after {
+  @apply text-gray-300;
+}
+
+[dir="ltr"] .subheading-anchor {
+  @apply ml-1;
 }
 
 span.toc-title {
-  @apply cursor-pointer text-2xl;
+  @apply ml-4 cursor-pointer text-2xl;
 }
 
 p {
