--- a/src/styles/core.css
+++ b/src/styles/core.css
@@ -1,4 +1,5 @@
 @tailwind base;
+@tailwind utilities;
 
 @layer base {
   *,
@@ -103,12 +104,40 @@
   }
 }
 
+@layer utilities {
+  .text-gradient {
+    @apply text-transparent;
+    --bg-size: 400%;
+    background: linear-gradient(
+        90deg,
+        rgb(255, 100, 105) 0%,
+        rgb(255, 150, 86) 25%,
+        rgb(255, 195, 75) 50%,
+        rgb(255, 150, 86) 75%,
+        rgb(255, 100, 105) 100%
+      )
+      0 0 / var(--bg-size) 100%;
+    background-clip: text;
+  }
+}
+
 html {
   margin-left: calc(100vw - 100%);
-  scroll-padding-top: 5rem;
+  scroll-padding-top: 4.5rem;
 }
 
 html,
 body {
   @apply bg-background accent-accent scrollbar-none motion-safe:scroll-smooth;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .text-gradient {
+    animation: move-bg 8s linear infinite;
+  }
+  @keyframes move-bg {
+    to {
+      background-position: var(--bg-size) 0;
+    }
+  }
 }
