feat: add share btns & fix style

--- a/src/styles/core.css
+++ b/src/styles/core.css
@@ -102,6 +102,12 @@
       0 0 / var(--bg-size) 100%;
     background-clip: text;
   }
+  .scrollbar-none {
+    scrollbar-width: none;
+  }
+  .scrollbar-none::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 html {
